# knowledge-base

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  GROK_FINDINGS.md  LEARNING.md  LIVE_VERIFICATION.md  Makefile  NOTES.md  PROJECT_STATUS.md  README.md  SESSION_LOG.md  WRITEUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
.husky/: pre-commit
app/: .gitignore  eslint.config.js  open-next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
app/src/app/: globals.css  layout.tsx
app/src/components/: button.tsx  card.tsx  config-guard.tsx  onboarding.tsx  page-header.tsx  sidebar.tsx
app/src/lib/: api.ts  utils.ts
cloudflare/: full-port-gaps.json
cloudflare/worker/: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.bench.jsonc  wrangler.jsonc
cloudflare/worker/fixtures/: benchmark.sample.json  d1-metadata-export.sample.json  raw-migration.sample.json  s-grade-consumer-evals.json  saas-maker-export.sample.json
cloudflare/worker/migrations/: 0001_schema.sql  0002_query_cache.sql  0003_knowledgebase_metadata.sql  0004_eval_reports.sql  0005_index_embedding_model.sql  0006_kb_domain_embedding_model.sql  0007_embedding_cache.sql
cloudflare/worker/scripts/: a-plus-proof.mjs  a-plus-scorecard.mjs  accept-llama32-vision-license.mjs  audit-client-contract.mjs  audit-consumer-rag-integrations.mjs  audit-d1-migrations.mjs  audit-free-ai-embedding-contract.mjs  audit-legacy-route-parity.mjs  audit-python-runtime-retirement.mjs  audit-sibling-rag-service.mjs  audit-vectorize-embedding-bindings.mjs  audit-vectorize-metadata-indexes.mjs  backfill-saas-maker.mjs  backfill-saas-maker.mjs.d.ts  benchmark-rag.mjs  consumer-auth-smokes.mjs  consumer-cloudflare-builds.mjs  deploy-readiness.mjs  embedding-model-release-plan.mjs  embedding-model-release-status.mjs  full-port-gaps.mjs  legacy-parse-eval.mjs  migrate-d1-metadata.mjs  migrate-raw-files.mjs  migrate-raw-files.mjs.d.ts  operator-report.mjs  predeploy-local.mjs  preflight.mjs  sibling-retirement-readiness.mjs  smoke-legacy-routes.mjs  smoke-local-cutover.mjs  smoke-rag-crud.mjs  smoke-saas-maker-export.mjs
cloudflare/worker/src/: auth.ts  cache.ts  chunk.ts  client.ts  d1-repository.ts  document-parser.ts  embeddings.ts  free-ai.ts  index.ts  kb-metadata-repository.ts  repository.ts  schema-inference.ts  service-bench.ts  testing-ui.ts  types.ts
cloudflare/worker/tests/: a-plus-proof.test.ts  a-plus-scorecard.test.ts  accept-llama32-vision-license.test.ts  app.test.ts  audit-consumer-rag-integrations.test.ts  audit-d1-migrations.test.ts  audit-free-ai-embedding-contract.test.ts  audit-python-runtime-retirement.test.ts  audit-sibling-rag-service.test.ts  audit-vectorize-embedding-bindings.test.ts  audit-vectorize-metadata-indexes.test.ts  backfill.test.ts  benchmark.test.ts  cloudflare-workers-shim.ts  consumer-auth-smokes.test.ts  consumer-cloudflare-builds.test.ts  deploy-readiness.test.ts  document-parser.test.ts  embedding-model-release-plan.test.ts  embedding-model-release-status.test.ts  embeddings.test.ts  free-ai.test.ts  full-port-gaps.test.ts  legacy-parse-eval.test.ts  legacy-route-parity.test.ts  migrate-d1-metadata.test.ts  migrate-raw-files.test.ts  operator-report.test.ts  package-scripts.test.ts  predeploy-local.test.ts  preflight.test.ts  sibling-retirement-readiness.test.ts  smoke-rag-crud.test.ts  smoke-saas-maker-export.test.ts
docker/: Dockerfile
docs/: agent-integration-examples.md  agent-search-direction.md  agent-tool-contract.md  bring-your-own-corpus.md  cloudflare-agent-handoff.md  cloudflare-full-port.md  demo-walkthrough.md  highsignal-integration.md  hosting-personal.md  interview-demo.md  onboard-new-domain.md  runbook.md
docs/img/: architecture.mmd
docs/learning/: new-things.md
domains/legal/: config.yaml  schema.yaml
domains/legal/eval/: dataset.yaml  dataset_extra.yaml  dataset_section.yaml
domains/sec/: config.yaml  schema.yaml
domains/sec/eval/: dataset.yaml  dataset_extra.yaml  dataset_large.yaml
landing-astro/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.toml
landing-astro/src/layouts/: Layout.astro
landing-astro/src/pages/: index.astro
landing-astro/src/styles/: landing.css
migrations/: 01_extensions.sql  02_schema.sql  03_dedup.sql  04_advisory_locks.sql  05_projects.sql  06_project_uniqueness.sql  07_schema_drafts.sql
scripts/: bench.py  build_eval_set.py  chain_legal_evals.sh  e2e_verify.sh  measure_abcd.sh  reembed_missing.py
src/kb/: __init__.py  cli.py  observability.py
src/kb/api/: app.py  health.py  metrics.py
src/kb/config/: __init__.py  defaults.yaml  pipeline.py  settings.py
src/kb/eval/: __init__.py  ragas.py  run.py  run_retrieval_only.py
src/kb/extract/: __init__.py  llm.py  runner.py  schema_to_json.py  windowing.py  xlsx_bridge.py
src/kb/jobs/: __init__.py  enqueue.py  runner.py  worker.py
src/kb/parse/: __init__.py  parser.py  vision.py
src/kb/query/: __init__.py  crag.py  duckdb_route.py  engine.py  graph_route.py  intent.py  mmr.py  rerank.py  rewriter.py  search.py  spans.py  structured.py  types.py  verify.py
src/kb/resolve/: __init__.py  keys.py  resolver.py
src/kb/schema/: __init__.py  infer.py  loader.py  migrate.py  model.py
src/kb/seed/: __init__.py  (+2 more)
streamlit_app/: app.py  style.py
streamlit_app/theme/: highsignal.toml
tests/: conftest.py  test_agent_search.py  test_chunking.py  test_citation_scoring.py  test_dedup.py  test_dedup_integration.py  test_duckdb_helpers.py  test_eval_retrieval_only.py  test_extraction_pipeline.py  test_graph_route.py  test_init_db.py  test_keys.py  test_mmr.py  test_objects.py  test_parse_cache.py  test_pgvector_filters.py  test_pipeline_config.py  test_query_synthesis.py  test_resolver_logic.py  test_schema_drafts.py  test_schema_infer_files.py  test_schema_model.py  test_sources.py  test_title_promotion.py  test_vector_contract.py  test_verify.py  test_windowing.py  test_xlsx_bridge.py
(+50 files in other folders)
