[project]
name = "kb"
version = "0.1.0"
description = "Domain-agnostic Knowledge Base service: schema-driven ingestion, hybrid retrieval, cited answers."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "rich>=13.7",
  "typer>=0.12",
  "qdrant-client>=1.11,<1.13",  # pin tight to qdrant/qdrant:v1.12.4 server image
  "fastembed>=0.4",
  "openai>=1.40",
  "instructor>=1.6",      # Pydantic-typed LLM outputs; replaces hand-rolled chat_json
  "aiolimiter>=1.1",      # Async rate-limiter; smooths gateway 429s before tenacity retries fire
  "cachetools>=5.3",      # LRU caches; replaces hand-rolled FIFO in vector/embed.py (Grok #9)
  "structlog>=24.1",      # Structured logging; stdlib-compat, contextvar binding, JSON in prod
  "orjson>=3.10",         # Fast JSON; FastAPI ORJSONResponse, handles datetime/UUID/Decimal natively
  "uvloop>=0.21; sys_platform != 'win32'",  # ~10-20% faster event loop than stdlib asyncio
  "prometheus-client>=0.21",  # Official Prometheus client; replaces hand-rolled metrics aggregator
  "asgi-correlation-id>=4.3",  # Request-ID middleware; injects ID into structlog contextvars
  "tiktoken>=0.7",
  "unstructured[pdf,xlsx]>=0.15",
  # torch/torchvision are transitive via unstructured-inference → timm; declared
  # explicitly so [tool.uv.sources] can pin them to the CPU index (the default
  # PyPI wheel bundles ~4.4GB of CUDA libs this project never uses).
  "torch>=2.4,<2.8",
  "torchvision>=0.19,<0.23",
  "pypdf>=4.3",
  "openpyxl>=3.1",
  "pgvector>=0.3",
  "rapidfuzz>=3.9",
  "minio>=7.2",
  "edgartools>=2.0.0",
  "streamlit>=1.36",
  "pandas>=2.2",
  "pdf2image>=1.17",
  "duckdb>=1.0",
  "pillow>=10.4",
  "reportlab>=4.2",
]

[project.scripts]
kb = "kb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"src/kb/api/**/*.py" = ["B008"]  # FastAPI uses Depends/File/Form as default args by design.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
